model-server/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-automl-flowers-ms
spec:
  ports:
    - port: 8501
      name: web
  selector:
    app: edge-automl-flowers-ms
