model-server/deploy/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: edge-automl-flowers-ms
spec:
  to:
    kind: Service
    name: edge-automl-flowers-ms
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
